<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg_white"
    android:orientation="vertical">

    <include
        layout="@layout/base_top_bar"
        />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"

        >

        <LinearLayout style="@style/bg_white_round"
            android:gravity="center_horizontal"
            >

            <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/img_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/base_margin_large"
                android:src="@drawable/user_icon_default"
                android:scaleType="fitXY"
                app:riv_corner_radius="50dip"
                app:riv_mutate_background="true" />

            <TextView
                style="@style/base_text_content.small.grey"
                android:text="@string/info_click_tomodify"
                android:layout_marginTop="@dimen/base_margin_mid"
                />

            <LinearLayout
                android:id="@+id/view_modifyname"
                style="@style/base_item_style"
                android:layout_marginTop="@dimen/base_margin_xlarge"
                >
                <TextView
                    style="@style/base_text_content"
                    android:text="@string/info_nickname" />

                <TextView
                    android:id="@+id/text_nickname"
                    style="@style/base_text_content.match"
                    android:gravity="right"
                    android:maxLines="1"
                    />

                <ImageView
                    style="@style/base_item_img_tag"/>

            </LinearLayout>

            <ImageView style="@style/divider_hor_style" />

            <LinearLayout
                android:id="@+id/view_modifypwd"
                style="@style/base_item_style">
                <TextView
                    style="@style/base_text_content.match"
                    android:text="@string/info_modify_pwd" />

                <ImageView
                    style="@style/base_item_img_tag"/>

            </LinearLayout>

            <ImageView style="@style/divider_hor_style" />
            <LinearLayout
                android:id="@+id/view_modifymobile"
                style="@style/base_item_style">
                <TextView
                    style="@style/base_text_content"
                    android:text="@string/info_modify_mobile" />

                <TextView
                    android:id="@+id/text_mobile"
                    style="@style/base_text_content.match"
                    android:gravity="right"
                    />

                <ImageView
                   style="@style/base_item_img_tag"/>
            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
